deploy/production/deployment-env-patch.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-conversion
spec:
  template:
    spec:
      containers:
        - name: data-conversion
