deploy/production/data-conversion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-conversion
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: data-conversion.psdi.ac.uk
    http:
      paths:
      - backend:
          service:
            name: data-conversion
            port:
              number: 8000
        path: /?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - data-conversion.psdi.ac.uk
    secretName: psdi-ac-uk-tls
